--- a/style.css
+++ b/style.css
@@ -1,19 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap'); */
 :root{
 --verydarkblue: hsl(212, 21%, 14%);
 --darkgrayishblue: hsl(228, 12%, 48%);
 --white: hsl(0, 0%, 100%);
 --darkcyan: hsl(158, 36%, 37%);
+--verydarkcyan: hsl(158, 36%, 20%);
 --cream: hsl(30, 38%, 92%);
 }
 @font-face {
     font-family: Montserrat;
     src: url(./fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
-/* @font-face {
+@font-face {
     font-family: Fraunces;
-    src: url(./fonts/Fraunces/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf);    
-} */
+    src: url(./fonts/Fraunces/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf); 
+    font-weight: 700;   
+    font-style: normal;
+}
 *{
     margin: 0;
     padding: 0;
@@ -25,88 +28,176 @@ body{
 img{
     width: 100%;
 }
-section.main-container{
+.cart{
+    width: 14px;
+    margin-right: .5em;    
+ }
+ section.main-container{
     background-color: var(--white);
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-areas: "prod content";
+    transform: translate(-50%,-50%);  
     width: 40%;
     border-radius: 14px;
 }
-.right-col{
-    grid-area: content;
-    padding: 3em;
-    
-}
 .left-col{
-    grid-area: prod;    
-    background: url(./imgs/image-product-desktop.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-x: center;
     border-top-left-radius: 14px;
-    border-bottom-left-radius: 14px;
+    border-bottom-left-radius: 14px;    
 }
 h5{
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: .5em;
     text-transform: uppercase;
-    color: hsl(228, 12%, 48%);
-    
+    color: hsl(228, 12%, 48%);    
 }
 h1{
     font-family: 'Fraunces', serif;
-    font-weight: 700;
-    font-size: 2.5em;
-    text-transform: capitalize;
-    margin: .5em 1em .5em 0;
-    line-height: 1em;
+    font-weight: 700;   
+    text-transform: capitalize;   
     color: var(--verydarkblue)
 }
 p{
     font-family: Montserrat;
     color: var(--darkgrayishblue);  
-    font-weight: 500;
-    font-size: 1.000em;
-    padding: 0 1em 2em 0;
-    line-height: 1.5em;
-}
-.price-container{
-    display: flex;    
-    padding-bottom: 2em;
+    font-weight: 500;    
 }
 .discounted-price{
-    font-family: 'Fraunces', serif;
     font-weight: 700;
-    color: var(--darkcyan);
-    font-size: 2.5em;
+    color: var(--darkcyan)
 }
 .price{
-    height: auto;
     text-decoration: line-through;
-    color: var(--darkgrayishblue);
-}
-.cart{
-   width: 14px;
+    color: var(--darkgrayishblue)
 }
 .btn-cart{
     width: 100%;
-    display: inline-block;
-    padding: 1em;
+    display: inline-block;   
     border-radius: 0.375rem;;
     border: none;
     background-color: var(--darkcyan);
     color: var(--white);
     font-family: Montserrat;
-    font-weight: bold;
-    font-size: 14px;
-    letter-spacing: normal;
-    line-height: 1.5;
+    font-weight: bold;   
     text-align: center;
 }
+.btn-cart:active{
+    cursor: pointer;
+    background-color: var(--verydarkcyan)
+}
+.btn-cart:hover{
+    cursor: pointer;
+    background-color: var(--verydarkcyan)
+}
 
+@media only screen and (max-width: 1440px) and (min-width: 375px) {
+    section.main-container{       
+        
+        border-top-left-radius: 14px;    
+        border-top-right-radius: 14px;    
+    }
+    .right-col{
+        padding: 2em;
 
+    }
+    .mobile-prod    {
+        border-top-left-radius: 14px;    
+        border-top-right-radius: 14px;           
+    }
+    h5{
+        letter-spacing: 1em;
+        font-size: 0.688em;
+        margin: 0 0 1em 0;
+    }
+    h1{
+        font-size: 2.5em;
+        margin: 0 0 .5em 0;
+    }
+    p{
+        font-size: 1em; 
+        padding: 0 0 2em 0;       
+    }
+    .price-container{
+        display: flex;
+        padding-bottom: 2em;  
+    }
+    .discounted-price{
+        font-size: 2.5em;
+        margin-right: .5em
+    }
+    .price{
+        font-size: 1em;
+        margin-top: .5em;
+    }
+    .btn-cart{
+        padding: 0 0 0.938em 0;
+        font-size: 0.875em; 
+    }
+    .cart{        
+        margin-top: 1em;        
+    }
+}
+@media (min-width: 1440px){
+    .mobile-prod{
+        display: none;
+    }
+    section.main-container{
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        grid-template-areas: "prod content";
+        width: 40%;
+        border-radius: 14px;               
+    }
+    .right-col{
+        grid-area: content;
+        padding: 3em;        
+    }
+    .left-col{
+        grid-area: prod;    
+        background: url(./imgs/image-product-desktop.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-x: center;
+        border-top-left-radius: 14px;
+        border-bottom-left-radius: 14px;
+    }
+    h5{        
+        letter-spacing: .5em;                     
+    }
+    h1{        
+        font-weight: 700;
+        font-size: 2.5em;        
+        margin: .5em 1em .5em 0;
+        line-height: 1em;        
+    }
+    p{        
+        font-weight: 500;
+        font-size: 1.000em;
+        padding: 0 1em 2em 0;
+        line-height: 1.5em;
+    }
+    .price-container{        
+        padding-bottom: 2em;        
+    }
+    .discounted-price{        
+        font-weight: 700;        
+        font-size: 2.5em;
+        margin-right: .5em;
+    }
+    .price{
+        height: auto;        
+        margin-top: 1.2em;
+    } 
+    
+    .btn-cart{        
+        padding: 1em;       
+        font-size: 14px;
+        letter-spacing: normal;
+        line-height: 1.5;
+        text-align: center;
+    }
+    .cart{        
+        margin-top: 0;        
+    }    
+    
+}
