--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ img{
     transform: translate(-50%,-50%);  
     width: 40%;
     border-radius: 14px;
+    
 }
 .left-col{
     border-top-left-radius: 14px;
@@ -93,11 +94,10 @@ p{
     background-color: var(--verydarkcyan)
 }
 
-@media only screen and (max-width: 1440px) and (min-width: 375px) {
-    section.main-container{       
-        
+@media only screen and (max-width: 1439px) and (min-width: 375px) {
+    section.main-container{               
         border-top-left-radius: 14px;    
-        border-top-right-radius: 14px;    
+        border-top-right-radius: 14px;            
     }
     .right-col{
         padding: 2em;
@@ -148,7 +148,7 @@ p{
         display: grid;
         grid-template-columns: repeat(2, 50%);
         grid-template-areas: "prod content";
-        width: 40%;
+        width: 50%;
         border-radius: 14px;               
     }
     .right-col{
@@ -170,13 +170,13 @@ p{
     h1{        
         font-weight: 700;
         font-size: 2.5em;        
-        margin: .5em 1em .5em 0;
+        margin: .5em .5em .5em 0;
         line-height: 1em;        
     }
     p{        
         font-weight: 500;
         font-size: 1.000em;
-        padding: 0 1em 2em 0;
+        padding: 0 .5em 2em 0;
         line-height: 1.5em;
     }
     .price-container{        
