--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ p{
     font-weight: 500;    
 }
 .price-container{
-    display: flex;
+    display: flex; 
+    align-items:center;
 }
 .discounted-price{
     font-weight: 700;
@@ -72,7 +73,8 @@ p{
 }
 .price{
     text-decoration: line-through;
-    color: var(--darkgrayishblue)
+    color: var(--darkgrayishblue);
+    margin-right: 0.8rem;
 }
 .btn-cart{
     width: 100%;
@@ -122,7 +124,8 @@ p{
     }
     .price-container{
         display: flex;
-        padding-bottom: 2em;  
+        padding-bottom: 2em;          
+    align-items:center;
     }
     .discounted-price{
         font-size: 2.5em;
@@ -180,8 +183,9 @@ p{
         line-height: 1.5em;
     }
     .price-container{        
-        
-        padding-bottom: 2em;        
+        display: flex;         
+        padding-bottom: 2em;  
+        align-items: flex-start;      
     }
     .discounted-price{        
         font-weight: 700;        
@@ -191,6 +195,7 @@ p{
     .price{
         height: auto;        
         margin-top: 1.2em;
+        
     } 
     
     .btn-cart{        
