--- a/style.css
+++ b/style.css
@@ -1,211 +1,123 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap'); */
 :root{
---verydarkblue: hsl(212, 21%, 14%);
---darkgrayishblue: hsl(228, 12%, 48%);
---white: hsl(0, 0%, 100%);
---darkcyan: hsl(158, 36%, 37%);
---verydarkcyan: hsl(158, 36%, 20%);
---cream: hsl(30, 38%, 92%);
-}
-@font-face {
-    font-family: Montserrat;
-    src: url(./fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
-}
-@font-face {
-    font-family: Fraunces;
-    src: url(./fonts/Fraunces/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf); 
-    font-weight: 700;   
-    font-style: normal;
-}
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    background-color: var(--cream);
-    overflow: hidden;    
-}
-img{
-    width: 100%;
-}
-.cart{
-    width: 14px;
-    margin-right: .5em;    
- }
- section.main-container{
-    background-color: var(--white);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);  
-    width: 40%;
-    border-radius: 14px;
-    
-}
-.left-col{
-    border-top-left-radius: 14px;
-    border-bottom-left-radius: 14px;    
-}
-h5{
-    font-family: 'Montserrat', sans-serif;
-    letter-spacing: .5em;
-    text-transform: uppercase;
-    color: hsl(228, 12%, 48%);    
-}
-h1{
-    font-family: 'Fraunces', serif;
-    font-weight: 700;   
-    text-transform: capitalize;   
-    color: var(--verydarkblue)
-}
-p{
-    font-family: Montserrat;
-    color: var(--darkgrayishblue);  
-    font-weight: 500;    
-}
-.price-container{
-    display: flex; 
-    align-items:center;
-}
-.discounted-price{
-    font-weight: 700;
-    color: var(--darkcyan)
-}
-.price{
-    text-decoration: line-through;
-    color: var(--darkgrayishblue);
-    margin-right: 0.8rem;
-}
-.btn-cart{
-    width: 100%;
-    display: inline-block;   
-    border-radius: 0.375rem;;
-    border: none;
-    background-color: var(--darkcyan);
-    color: var(--white);
-    font-family: Montserrat;
-    font-weight: bold;   
-    text-align: center;
-}
-.btn-cart:active{
-    cursor: pointer;
-    background-color: var(--verydarkcyan)
-}
-.btn-cart:hover{
-    cursor: pointer;
-    background-color: var(--verydarkcyan)
-}
-
-@media (min-width: 375px) {
-    section.main-container{               
-        border-top-left-radius: 14px;    
-        border-top-right-radius: 14px;            
+    --verydarkblue: hsl(212, 21%, 14%);
+    --darkgrayishblue: hsl(228, 12%, 48%);
+    --white: hsl(0, 0%, 100%);
+    --darkcyan: hsl(158, 36%, 37%);
+    --verydarkcyan: hsl(158, 36%, 20%);
+    --cream: hsl(30, 38%, 92%);
     }
-    .right-col{
-        padding: 2em;
+    @font-face {
+        font-family: Montserrat;
+        src: url(./fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
     }
-    .mobile-prod    {
-        border-top-left-radius: 14px;    
-        border-top-right-radius: 14px;           
+    @font-face {
+        font-family: Fraunces;
+        src: url(./fonts/Fraunces/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf); 
+        font-weight: 700;   
+        font-style: normal;
     }
-    h5{
-        letter-spacing: 1em;
-        font-size: 0.688em;
-        margin: 0 0 1em 0;
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
-    h1{
-        font-size: 2.5em;
-        margin: 0 0 .5em 0;
+    body{
+        background-color: var(--cream);    
+        overflow: hidden;
+        box-sizing: border-box;
     }
-    p{
-        font-size: 1em; 
-        padding: 0 0 2em 0;       
+    img{
+        display: block;
     }
-    .price-container{
-        display: flex;
-        padding-bottom: 2em;          
-    align-items:center;
-    }
-    .discounted-price{
-        font-size: 2.5em;
-        margin-right: .5em
-    }
-    .price{
-        font-size: 1em;
-        margin-top: .5em;
-    }
-    .btn-cart{
-        padding: 0 0 0.938em 0;
-        font-size: 0.875em; 
-    }
-    .cart{        
-        margin-top: 1em;        
-    }
-}
-@media (min-width: 1440px){
-    .mobile-prod{
-        display: none;
-    }
-    section.main-container{
+    .main-container{
         display: grid;
-        grid-template-columns: repeat(2, 50%);
-        grid-template-areas: "prod content";
-        width: 50%;
-        border-radius: 14px;               
-    }
-    .right-col{
-        grid-area: content;
-        padding: 3em;        
+        grid-template-columns: repeat(2, 51fr);
+        max-width: 90%;
+        width: 37.5rem;
+        margin: 0 auto;
+        margin-top: 12rem;
+        margin-bottom: 12%;
+        border-radius: 14px;    
+        background-color: var(--white);
     }
     .left-col{
-        grid-area: prod;    
-        background: url(./imgs/image-product-desktop.jpg);
+        background-image: url("./imgs/image-product-desktop.jpg");
+        background-position: center;
         background-size: cover;
+        width: 100%;
+        border-radius: 14px 0 0 14px;
         background-repeat: no-repeat;
-        background-position-x: center;
-        border-top-left-radius: 14px;
-        border-bottom-left-radius: 14px;
     }
-    h5{        
-        letter-spacing: .5em;                     
+    .right-col{
+        display: flex;
+        flex-direction: column;
+        padding: 2em;
+        gap: 1.4rem;
     }
-    h1{        
+    h5{
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: .5em;
+        text-transform: uppercase;
+        color: var(--darkgrayishblue);   
+    }
+    h1{
+        font-family: 'Fraunces', serif;
+        font-weight: 700;   
+        text-transform: capitalize;   
+        color: var(--verydarkblue);
+        font-size: 2em;
+    }
+    p{
+        font-family: 'Montserrat';
+        color: var(--darkgrayishblue);  
+        font-weight: 500;    
+        font-size: 0.875em;
+    }
+    .price-container{
+        display: flex;    
+    }
+    .discounted-price{
+        color: var(--darkcyan);
         font-weight: 700;
-        font-size: 2.5em;        
-        margin: .5em .5em .5em 0;
-        line-height: 1em;        
-    }
-    p{        
-        font-weight: 500;
-        font-size: 1.000em;
-        padding: 0 .5em 2em 0;
-        line-height: 1.5em;
-    }
-    .price-container{        
-        display: flex;         
-        padding-bottom: 2em;  
-        align-items: flex-start;      
-    }
-    .discounted-price{        
-        font-weight: 700;        
-        font-size: 2.5em;
-        margin-right: .5em;
+        font-size: 2em;
+        margin-right: 1em;
     }
     .price{
-        height: auto;        
-        margin-top: 1.2em;
-        
-    } 
-    
-    .btn-cart{        
-        padding: 1em;       
-        font-size: 14px;
-        letter-spacing: normal;
-        line-height: 1.5;
-        text-align: center;
+        display: flex;
+        align-self: center;
+        text-decoration: line-through;
+        color: var(--darkgrayishblue);
     }
-    .cart{        
-        margin-top: 0;        
-    }    
-    
-}
+    .btn-cart{
+        width: 100%;
+        background-color: var(--darkcyan);
+        border: none;
+        border-radius: .5em;
+        color: var(--white);
+        font-weight: 600;
+        display: flex;
+        justify-content: center;
+        padding: 1.25em;
+        font-size: 14px;
+    }
+    .cart{
+        margin-right: .5em;
+        font-weight: 600;
+    }
+    .btn-cart:hover, .btn-cart:active{
+        cursor: pointer;
+        background-color: var(--verydarkcyan);
+    }
+    @media screen and (max-width: 650px) {
+        .main-container {
+          margin-top: 10%;
+          grid-template-columns: 1fr;
+          grid-template-rows: 15rem 1fr;
+          height: 100%;
+        }
+        .left-col{
+          background-image: url("./imgs/image-product-mobile.jpg");
+          border-radius: 15px 15px 0 0;
+        }
+      }
